--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "app_id" : "com.moodle.moodlemobile",
-    "appname": "ABSL Fashion",
-    "desktopappname": "ABSL Fashion",
+    "appname": "ABSL Fashion Institute",
+    "desktopappname": "ABSL Fashion Institute",
     "versioncode" : "2019",
     "versionname" : "3.3.1",
     "cache_expiration_time" : 300000,
